--- a/myproject/Templates/entry.html
+++ b/myproject/Templates/entry.html
@@ -8,8 +8,8 @@
 <body>
 <nav class="navMenu">
       <a href="/login">Login</a>
-      <a method="post" href="/search_page">Guest</a>
-      <a href="#">New User</a>
+      <a method="post" href="/search_page_anonymous">Guest</a>
+      <a href="{{ url_for('register') }}" href="#">New User</a>
       <a href="#">Statistics</a>
       <div class="dot"></div>
     </nav>
