--- a/myproject/Templates/home.html
+++ b/myproject/Templates/home.html
@@ -3,7 +3,7 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h2>Home Page</h2>
+<h2>Main user menu</h2>
 <p>Welcome back, {{ username }}!</p>
 
 
