--- a/myproject/Templates/new_user.html
+++ b/myproject/Templates/new_user.html
@@ -2,19 +2,18 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Login</title>
+		<title>Register</title>
 		<link rel="stylesheet" href=/static/estilo_login_page.css>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
 	</head>
 	<body>
-		<div class="login">
-			<h1>Login</h1>
+		<div class="register">
+			<h1>Register</h1>
 			<div class="links">
-				<a href="{{ url_for('login') }}" class="active">Login</a>
-				<a href="{{ url_for('register') }}">Register</a>
-				<a href=/search_page_anonymous>Guest</a>
+				<a href="{{ url_for('login') }}">Login</a>
+				<a href="{{ url_for('register') }}" class="active">Register</a>
 			</div>
-			<form action="{{ url_for('login') }}" method="post">
+			<form action="{{ url_for('register') }}" method="post" autocomplete="off">
 				<label for="username">
 					<i class="fas fa-user"></i>
 				</label>
@@ -23,15 +22,16 @@
 					<i class="fas fa-lock"></i>
 				</label>
 				<input type="password" name="password" placeholder="Password" id="password" required>
+				<label for="email">
+					<i class="fas fa-envelope"></i>
+				</label>
+				<input type="email" name="email" placeholder="Email" id="email" required>
 				<div class="msg">{{ msg }}</div>
-				<input type="submit" value="Login">
+				<input type="submit" value="Register">
 				<a href="/entry">
 				<input type="button" class="w3-button w3-grey" value="Back to entry page">
 				</a>
-			</div>
 			</form>
-			</a>
 		</div>
-
 	</body>
 </html>
