Versión casi final. Estadísticas parcialmente incluidas. ENTREGA 11.01

--- a/myproject/Templates/home.html
+++ b/myproject/Templates/home.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h2>Main user menu</h2>
-<p>Welcome back, {{ username }}!</p>
+<p>Welcome back, {{ username }}!. Local date/time is: {{la_fecha}}</p>
 
 
 <form method="post" action="/results">
