--- a/myproject/Templates/search_page_anonymous.html
+++ b/myproject/Templates/search_page_anonymous.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h2>Home Page</h2>
-<p>You are visiting the web as an anonymous user</p>
+<p>You are visiting the web as an anonymous user. Local date/time is: {{la_fecha}}</p>
 
 
 <form method="post" action="/results_anonymous">
