--- a/myproject/Templates/entry.html
+++ b/myproject/Templates/entry.html
@@ -10,7 +10,7 @@
       <a href="/login">Login</a>
       <a method="post" href="/search_page_anonymous">Guest</a>
       <a href="{{ url_for('register') }}" href="#">New User</a>
-      <a href="#">Statistics</a>
+      <a href="/login/profile">Statistics</a>
       <div class="dot"></div>
     </nav>
 </body>
